'itwa.push({ token })'

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						token: (itwa.push_ = data.token)
 					});
 				else
-					(async function() {
+					return (async function() {
 						try {
 							let key = 'AAAAb-JBOno:APA91bFCjRrWjhsa7jR9UC-JOhA9wT7IqzYy5V4DAY9D6HEz22Nh_sKuGCXODqn1I8GpQXmdOmbM_0qD8joPEjaymzp8BqFeNtdzgPgxxBcQnn7qg4QBJo3TbQEI3HmiZDilvN2qapW0';
 							if (!itwa.push_) {
