--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 	<span class="chip" onclick="alert('Test alert')">Alert</span>
 	<!--a class="chip" href="?cache=upgrade">Update cache</a-->
 	<a class="chip" target="_blank" href="https://google.com/">Google</a>
+	<span class="chip" onclick="itwa.show_log()">Show Log</span>
 	<span class="chip" onclick="itwa.auth()">Auth</span>
 	<span class="chip" onclick="itwa.gps()">Gps</span>
 	<span class="chip" onclick="itwa.push()">Push</span>
+	<pre id="show_log"></pre>
 	<pre id="debug"></pre>
 	<pre id="push"></pre>
 	<pre id="gps"></pre>
@@ -90,6 +92,14 @@
 			},
 			jwt: function(token) { // https://jwt.io/
 				return JSON.parse(atob(token.split('.')[1]));
+			},
+			show_log: function(data) {
+				if (data)
+					window.itwa.debug('show_log', data);
+				else if (('webkit' in window) && ('messageHandlers' in webkit) && ('itwa' in webkit.messageHandlers))
+					webkit.messageHandlers.itwa.postMessage('$show_log$');
+				else
+					throw new Error('Not found js bridge');
 			},
 			auth: function(data) {
 				if (data) {
