--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 			text-decoration: none;
 			cursor: pointer;
 		}
+		pre {
+			overflow-x: auto;
+		}
 		pre, textarea {
 			border: 1px solid #283142;
 			margin: 16px -8px;
